@@ -1,3 +1,6 @@
+2014-04-04 Pierrick Caillon <pierrick.caillon@plan-net.fr>
+	* Feature: Added APIService::getPlanJourney manageDisrupt parameter.
+
 2014-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Fix: NAViTiA Url size limit workaround. RequestURL in API url can cause calls to fail.
 
